Adding Optional Checker enabled pom.xml